tests/spec/compile-fail/001_use_after_move.zn
// category: compile-fail
// stage: mvp
// milestone: M4
// profile: freestanding
// purpose: moved non-Copy value cannot be used again

module tests.fail.useAfterMove;

struct Handle {
    id: U32,
}

impl Handle {
    destroy {}
}

fn consume(move handle: Handle) {}

fn main() {
    val handle = Handle { id: 1 };
    consume(move handle);
    consume(move handle); // expected-error[E0401]: use of moved value
}
